--- a/site/package.json
+++ b/site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "valkyrie-docs",
+  "name": "amaranth-docs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "@emotion/styled": "11.11.0",
     "@mui/joy": "5.0.0-beta.1",
     "@mui/system": "5.14.4",
-    "@sippy-platform/valkyrie": "file:../",
+    "@studio384/amaranth": "file:../",
     "eslint": "8.46.0",
     "eslint-config-next": "13.3.1",
     "gray-matter": "4.0.3",
