Fix prefix, add dark mode support

--- a/.svg-to-tsrc
+++ b/.svg-to-tsrc
@@ -3,7 +3,7 @@
   "outputDirectory": "./src",
   "interfaceName": "IAmaranthIcon",
   "typeName": "Amaranth",
-  "prefix": "am",
+  "prefix": "ai",
   "fileName": "Amaranth",
   "additionalModelFile": "./src",
   "compileSources": true,
