Fix version tagging and name for pages

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "icons:ts": "svg-to-ts-constants",
     "test": "echo \"Error: no test specified\" && exit 1",
     "pages": "node build/generate-pages.js --verbose",
-    "library": "node build/generate-library.js",
-    "prod": "npm run icons && npm run pages && npm run build"
+    "lib": "node build/generate-library.js",
+    "prod": "npm run icons && npm run pages && npm run lib && npm run build"
   },
   "repository": {
     "type": "git",
