--- a/package.json
+++ b/package.json
@@ -37,9 +37,7 @@
   },
   "homepage": "https://studio384.github.io/amaranth",
   "peerDependencies": {
-    "@emotion/react": ">=11.x",
-    "@emotion/styled": ">=11.x",
-    "@mui/system": ">=5.x",
+    "@emotion/css": "^11.11.2",
     "react": ">=16.x"
   },
   "dependencies": {
