--- a/docs/package.json
+++ b/docs/package.json
@@ -14,31 +14,31 @@
   "dependencies": {
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "@mui/joy": "5.0.0-beta.5",
-    "@reduxjs/toolkit": "1.9.5",
-    "@studio384/amaranth": "file:..",
+    "@mui/joy": "5.0.0-beta.15",
+    "@reduxjs/toolkit": "1.9.7",
+    "@studio384/amaranth": "file:../",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "8.1.2",
-    "react-router-dom": "6.15.0",
-    "vite-bundle-visualizer": "0.10.0",
+    "react-redux": "8.1.3",
+    "react-router-dom": "6.19.0",
+    "vite-bundle-visualizer": "0.11.0",
     "vite-plugin-html": "3.2.0"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "4.2.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@typescript-eslint/eslint-plugin": "6.6.0",
-    "@typescript-eslint/parser": "6.6.0",
-    "@vitejs/plugin-react-swc": "3.3.2",
-    "eslint": "8.48.0",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-react": "^7.33.2",
+    "@trivago/prettier-plugin-sort-imports": "4.3.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "@typescript-eslint/eslint-plugin": "6.11.0",
+    "@typescript-eslint/parser": "6.11.0",
+    "@vitejs/plugin-react-swc": "3.5.0",
+    "eslint": "8.53.0",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.4.3",
-    "prettier": "^3.0.3",
+    "eslint-plugin-react-refresh": "0.4.4",
+    "prettier": "3.1.0",
     "typescript": "5.2.2",
-    "vite": "4.4.9"
+    "vite": "5.0.0"
   }
 }
