Amicon branding implementation

--- a/.github/ISSUE_TEMPLATE/BugReport.yml
+++ b/.github/ISSUE_TEMPLATE/BugReport.yml
@@ -9,14 +9,14 @@ body:
     id: current
     attributes:
       label: Current behavior
-      description: Describe the current faulty beharior of Amaranth.
+      description: Describe the current faulty beharior of Amicons.
     validations:
       required: true
   - type: textarea
     id: expected
     attributes:
       label: Expected behavior
-      description: Describe the expected beharior of Amaranth.
+      description: Describe the expected beharior of Amicons.
     validations:
       required: true
   - type: textarea
@@ -40,7 +40,7 @@ body:
   - type: checkboxes
     id: implementations
     attributes:
-      label: Which parts of Amaranth are affected?
+      label: Which parts of Amicons are affected?
       options:
         - label: Web fonts and CSS
           required: false
@@ -56,7 +56,7 @@ body:
     attributes:
       label: Bug report checklist
       options:
-        - label: This bug occures in the latest version of Amaranth.
+        - label: This bug occures in the latest version of Amicons.
           required: true
         - label: The reproduction is included and is the minimum test case to recreate the faulty behavior.
           required: true
