--- a/docs/package.json
+++ b/docs/package.json
@@ -14,31 +14,31 @@
   "dependencies": {
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
-    "@mui/joy": "5.0.0-beta.24",
+    "@mui/joy": "5.0.0-beta.25",
     "@reduxjs/toolkit": "2.1.0",
     "@studio384/amaranth": "file:../",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "9.1.0",
-    "react-router-dom": "6.21.3",
-    "vite-bundle-visualizer": "1.0.0",
-    "vite-plugin-html": "3.2.2"
+    "react-router-dom": "6.22.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
-    "@types/react": "18.2.48",
+    "@types/react": "18.2.52",
     "@types/react-dom": "18.2.18",
-    "@typescript-eslint/eslint-plugin": "6.19.1",
-    "@typescript-eslint/parser": "6.19.1",
-    "@vitejs/plugin-react-swc": "3.5.0",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
+    "@vitejs/plugin-react-swc": "3.6.0",
     "eslint": "8.56.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
-    "prettier": "3.2.4",
+    "prettier": "3.2.5",
     "typescript": "5.3.3",
-    "vite": "5.0.12"
+    "vite": "5.0.12",
+    "vite-bundle-visualizer": "1.0.1",
+    "vite-plugin-html": "3.2.2"
   }
 }
