--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,7 @@ jobs:
         working-directory: docs
     steps:
       - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
           name: 'amicons'
           path: '../'
