--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,7 @@ jobs:
         working-directory: docs
     steps:
       - name: Download artifact
+        id: download
         uses: actions/download-artifact@v4
         with:
           name: 'amicons'
@@ -58,6 +59,7 @@ jobs:
           node-version: 20
           cache: 'npm'
       - name: Install dependencies
+        if: steps.download.outcome == 'success'
         run: npm install
       - name: Build
         run: npm run build
