--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,12 +46,11 @@ jobs:
         working-directory: docs
     steps:
       - name: Download artifact
-        working-directory: /
         id: download
         uses: actions/download-artifact@v4
         with:
           name: amicons
-          path: dist
+          path: ../dist
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Node
