--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,10 +38,9 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
-        working-directory: docs
         uses: actions/upload-pages-artifact@v1
         with:
-          path: './dist'
+          path: './docs/dist'
       - name: Deploy to GitHub Pages
         working-directory: docs
         id: deployment
