--- a/docs/package.json
+++ b/docs/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
     "@mui/joy": "5.0.0-beta.28",
+    "@mui/material": "5.15.10",
     "@studio384/amaranth": "file:../",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,7 +24,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
-    "@types/react": "18.2.55",
+    "@types/react": "18.2.56",
     "@types/react-dom": "18.2.19",
     "@typescript-eslint/eslint-plugin": "7.0.1",
     "@typescript-eslint/parser": "7.0.1",
