--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "amaranth-docs",
-  "homepage": "https://studio384.github.io/Amaranth",
+  "name": "amicons-docs",
+  "homepage": "https://studio384.github.io/amicons",
   "private": true,
   "version": "0.1.0",
   "type": "module",
