--- a/package.json
+++ b/package.json
@@ -37,22 +37,22 @@
   },
   "homepage": "https://studio384.github.io/amicons",
   "peerDependencies": {
-    "@emotion/css": "^11.11.2",
+    "@emotion/css": "^11.x",
     "react": ">=16.x"
   },
   "dependencies": {
-    "html-react-parser": "5.1.10"
+    "html-react-parser": "5.1.18"
   },
   "devDependencies": {
-    "@types/react": "18.3.1",
-    "nodemon": "3.1.0",
+    "@types/react": "18.3.12",
+    "nodemon": "3.1.7",
     "npm-run-all": "4.1.5",
-    "picocolors": "1.0.0",
+    "picocolors": "1.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "svg-to-ts": "12.0.0",
     "svgo": "3.3.2",
-    "typescript": "5.4.5"
+    "typescript": "5.6.3"
   },
   "browserslist": {
     "production": [
