--- a/amicons-docs/package.json
+++ b/amicons-docs/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@studio384/amaranth": "file:../amicons/",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
