--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: amicons
+        working-directory: ./amicons
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -37,8 +37,8 @@ jobs:
         with:
           name: amicons
           path: |
-            dist
-            node_modules
+            amicons/dist
+            amicons/node_modules
 
   deploy:
     needs: build
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: docs
+        working-directory: ./docs
     steps:
       - name: Checkout
         uses: actions/checkout@v4
