--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./amicons
+        working-directory: amicons
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -28,6 +28,7 @@ jobs:
         with:
           node-version: 20
           cache: "npm"
+          cache-dependency-path: amicons/package-lock.json
       - name: Install dependencies
         run: npm install
       - name: Production build
@@ -48,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./docs
+        working-directory: docs
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -57,6 +58,7 @@ jobs:
         with:
           node-version: 20
           cache: "npm"
+          cache-dependency-path: docs/package-lock.json
       - name: Download artifact
         id: download
         uses: actions/download-artifact@v4
