--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,8 +38,8 @@ jobs:
         with:
           name: amicons
           path: |
-            amicons/dist
-            amicons/node_modules
+            dist
+            node_modules
 
   deploy:
     needs: build
