--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: amicons
+          path: amicons
       - name: Install dependencies
         if: steps.download.outcome == 'success'
         run: npm install
